--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@tanstack/react-query": "^4.29.19",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.252.0",
-    "next": "13.4.7",
+    "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
