--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/table": "^2.2.2",
     "@hookform/resolvers": "^3.1.1",
+    "@mantine/hooks": "^6.0.17",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -35,6 +36,7 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "editorjs-react-renderer": "^3.5.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.252.0",
