--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "editorjs-react-renderer": "^3.5.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.252.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@types/editorjs__header": "^2.6.0",
+    "@types/lodash.debounce": "^4.0.7",
     "prisma": "^4.16.2"
   }
 }
